welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (i <- 0 to getMondeHauteur() -1) {
               ^